Add minicine DB

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</form>
 			</div>
 		</div>
-	</nav>
+	</nav><!-- nav.navbar -->
 
 	<div class="container">
 
@@ -161,7 +161,7 @@
 			</div>
 			<!-- End Sidebar -->
 
-		</div>
+		</div><!-- div.row -->
 
 		<hr>
 
